--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "vite": "^6.3.1",
     "vite-plugin-html": "^3.2.2"
+  },
+  "dependencies": {
+    "simplelightbox": "^2.14.3"
   }
 }
